updated cros file list